{
    "name": "GameControls",
    "maps": [
        {
            "name": "Movement",
            "id": "13ff7f05-2cac-458d-96e5-6c83bf6dbde1",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "c9adac3b-185a-42e6-8001-1b40640bc271",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "c0b5f2be-fbab-4cd7-bf06-c76f354dfa20",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "6db41c3d-0466-43c4-9a25-db77a2db31ba",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d690034c-fc98-48e0-9f11-095b2528bdc4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ec14dbc5-3cc0-43e9-a0b9-4473dc836075",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "70453565-a818-41a4-9368-fff97b356671",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f18f656b-a3c1-4e7d-86c5-fea4db5788e9",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c66e3c78-87ae-4e5e-9bdc-a729ac96509b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Attack",
            "id": "e25cefda-77d6-4adb-8a2c-a77e264387fb",
            "actions": [
                {
                    "name": "CursorPos",
                    "type": "Value",
                    "id": "9d27cc54-bf81-45b1-b588-71b96641b395",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RegularAttack",
                    "type": "Button",
                    "id": "228a5d61-502c-443f-acd8-f7ab1156d918",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "516d55cc-5186-4b75-9de9-fe70ea7d3586",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CursorPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0caa45be-e36d-4484-b3d6-ca100327fa53",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RegularAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interaction",
            "id": "30173199-3606-4ea0-99a7-fb8fe2892f4c",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "04b50ceb-af91-4a31-8245-d8d718b29dfb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuestLogToggle",
                    "type": "Button",
                    "id": "fa44a547-ca94-44b6-8f5e-432881d9d3e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "048d2eb4-cb47-463c-95e9-e920053662f8",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8664a9fc-440b-4868-b8dc-32a3b384dd67",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuestLogToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}